--- a/macacarefa/src/main/resources/application.properties
+++ b/macacarefa/src/main/resources/application.properties
@@ -1,31 +1,13 @@
 spring.application.name=macacarefa
-
-
 spring.datasource.url=jdbc:h2:file:./data/mcacarefa;DB_CLOSE_ON_EXIT=FALSE;
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=fesa
-spring.datasource.password=fesa
-
-
+spring.datasource.username=macacarefa
+spring.datasource.password=macacarefa
+# Configura\u00e7\u00f5es H2 Console  
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
 # Configura\u00e7\u00f5es JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# Configura\u00e7\u00f5es H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.web-allow-others=true
-
-
-# Configura\u00e7\u00f5es Thymeleaf
-spring.thymeleaf.cache=false
-#spring.thymeleaf.prefix=classpath:/templates/
-#spring.thymeleaf.suffix=.html
-#spring.thymeleaf.mode=HTML5
-
-
-# Configura\u00e7\u00f5es para upload de arquivos
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=2MB
-spring.servlet.multipart.max-request-size=2MB
