falta arrumar o login

--- a/macacarefa/src/main/resources/application.properties
+++ b/macacarefa/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=macacarefa
-spring.datasource.url=jdbc:h2:file:./data/mcacarefa;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.url=jdbc:h2:file:./data/macacarefa;DB_CLOSE_ON_EXIT=FALSE;INIT=CREATE SCHEMA IF NOT EXISTS MACACAREFA;
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=macacarefa
 spring.datasource.password=macacarefa
@@ -11,3 +11,11 @@ spring.h2.console.settings.web-allow-others=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Configura o n\u00edvel de log para exibir SQL no console
+spring.jpa.show-sql=true
+# Formata o SQL no log para facilitar a leitura
+spring.jpa.properties.hibernate.format_sql=true
+# Define o n\u00edvel de log espec\u00edfico do Hibernate para exibir SQL no console
+logging.level.org.hibernate.SQL=DEBUG
+# Exibe par\u00e2metros das consultas SQL no log
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
